<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:background="@color/colorPrimary"
>

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
    >
        <com.nevermore.guestbook.tools.InputField
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputHint="@string/name"
        />

        <com.nevermore.guestbook.tools.InputField
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:inputHint="@string/email"
                android:inputType="textEmailAddress"
        />


        <com.nevermore.guestbook.tools.InputField
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:inputHint="@string/password"
                android:inputType="textPassword"
        />

        <com.nevermore.guestbook.tools.InputField
                android:id="@+id/inputConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:inputHint="@string/confirm_pass"
                android:inputType="textPassword"
        />

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/ColoredButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/sign_in"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

            <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/tvHaveAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_acc"/>

            <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>